bk_ida/gccida/g2/cselib_process_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:1816:25: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse_noresize( hash_table_0, cselib_invalidate_mem_1, callmem); 
                        ^~~~~~~~~~~~
                        hash_table
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:1818:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:1825:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:1838:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( j = ( __int64)insn[4]; j; j = *( _QWORD *)( j + 16) ) 
                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:1851:25: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse_noresize( hash_table_0, discard_useless_locs, 0LL); 
                        ^~~~~~~~~~~~
                        hash_table
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:1854:25: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse_noresize( hash_table_0, discard_useless_values, 0LL); 
                        ^~~~~~~~~~~~
                        hash_table
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_process_insn/src/obj/cselib.o] Error 1
